--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,13 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "lint": "eslint . --ext .ts",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest watch"
+    "test:watch": "vitest watch",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
+    "check-format": "prettier --check \"src/**/*.{ts,tsx,json,md}\""
   },
   "keywords": [],
   "author": "",
@@ -38,9 +41,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
+    "@vitest/coverage-v8": "^1.0.0",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "nodemon": "^3.1.9",
-    "vitest": "^1.0.0",
+    "prettier": "^3.5.2",
     "supertest": "^6.3.3",
-    "@vitest/coverage-v8": "^1.0.0"
+    "vitest": "^1.0.0"
   }
 }
