--- a/server/package.json
+++ b/server/package.json
@@ -36,7 +36,8 @@
     "morgan": "^1.10.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-mongodb": "^6.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.24.1",
