--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.126",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
     "path-browserify": "^1.0.1",
@@ -68,5 +70,6 @@
     "prettier": "^3.5.2",
     "tailwindcss": "^3.4.1"
   },
-  "homepage": "."
+  "homepage": ".",
+  "proxy": "http://localhost:3001"
 }
