--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
+    "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
