Fix linter errors

--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -8,10 +8,29 @@
   node_bundler = "esbuild"
   external_node_modules = ["express", "mongoose"]
 
+# Redirect all requests to the API function
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/api"
   status = 200
+  force = true
+
+# Add CORS headers to all responses
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    Access-Control-Allow-Credentials = "true"
+
+# Special handling for OPTIONS requests (CORS preflight)
+[[redirects]]
+  from = "/*"
+  to = "/.netlify/functions/api"
+  status = 204
+  force = true
+  conditions = {method = "OPTIONS"}
 
 [dev]
   port = 3001 
