--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -17,15 +17,52 @@
   conditions = {method = "OPTIONS"}
   headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization", Access-Control-Allow-Credentials = "true"}
 
-# Redirect all requests to the API function
+# Redirect all API requests to the API function
 [[redirects]]
-  from = "/*"
+  from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
+  status = 200
+  force = true
+  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization", Access-Control-Allow-Credentials = "true"}
+
+# Redirect root path requests to the API function
+[[redirects]]
+  from = "/"
   to = "/.netlify/functions/api"
   status = 200
   force = true
   headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization", Access-Control-Allow-Credentials = "true"}
 
-# Add CORS headers to all responses
+# Redirect specific paths to the API function
+[[redirects]]
+  from = "/movies"
+  to = "/.netlify/functions/api/movies"
+  status = 200
+  force = true
+  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization", Access-Control-Allow-Credentials = "true"}
+
+[[redirects]]
+  from = "/tv"
+  to = "/.netlify/functions/api/tv"
+  status = 200
+  force = true
+  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization", Access-Control-Allow-Credentials = "true"}
+
+[[redirects]]
+  from = "/search"
+  to = "/.netlify/functions/api/search"
+  status = 200
+  force = true
+  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization", Access-Control-Allow-Credentials = "true"}
+
+[[redirects]]
+  from = "/bookmarked"
+  to = "/.netlify/functions/api/bookmarked"
+  status = 200
+  force = true
+  headers = {Access-Control-Allow-Origin = "*", Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS", Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization", Access-Control-Allow-Credentials = "true"}
+
+# Add CORS headers to all responses as a fallback
 [[headers]]
   for = "/*"
     [headers.values]
