Update client-side api services

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -3,23 +3,25 @@
   publish = "build"
   command = "CI= npm run build"
 
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+    # Add basic security headers
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+# SPA configuration - always return index.html for all routes
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-[[headers]]
-  for = "/*"
-    [headers.values]
-    Cache-Control = "public, max-age=0, must-revalidate"
-    # Add CORS headers for the client site as well
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
-
 [context.production.environment]
   REACT_APP_API_URL = "https://entertainment-web-app-api.netlify.app"
-  REACT_APP_USE_FALLBACK = "false"
+  REACT_APP_USE_FALLBACK = "true"
 
 [context.development.environment]
   REACT_APP_API_URL = "http://localhost:3001"
