--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -31,7 +31,8 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "prettier/prettier": "error",
-    "no-console": ["warn", { "allow": ["warn", "error"] }],
+    // "no-console": ["warn", { "allow": ["warn", "error", "log"] }],
+    "no-console": "off",
     "react/jsx-curly-brace-presence": ["error", { "props": "never", "children": "never" }],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
