--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "CI=false npm run build"
+  command = "npm install --production=false && CI=false npm run build"
   publish = "build"
 
 [dev]
