--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -26,7 +26,7 @@
 # SPA configuration - always return index.html for all routes
 [[redirects]]
   from = "/api/*"
-  to = "https://emilia-burza-entertainment-app-server.netlify.app/:splat"
+  to = "https://emilia-burza-entertainment-app-server.netlify.app/.netlify/functions/api/:splat"
   status = 200
 
 [[redirects]]
@@ -35,7 +35,7 @@
   status = 200
 
 [context.production.environment]
-  REACT_APP_API_URL = "https://emilia-burza-entertainment-app-server.netlify.app"
+  REACT_APP_API_URL = "https://emilia-burza-entertainment-app-server.netlify.app/.netlify/functions/api"
   REACT_APP_USE_FALLBACK = "true"
   NODE_ENV = "production"
 
