Fix Netlify function routing and redirects

--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -35,8 +35,14 @@
 
 # API routes redirect to the serverless function
 [[redirects]]
-  from = "/*"
+  from = "/api/*"
   to = "/.netlify/functions/api/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
 
 # Production context
