--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "npm install && tsc && npm run copy-files",
-    "copy-files": "mkdir -p dist/functions && cp -r netlify/functions/* dist/functions/ && for dir in routes config middleware models services types utils controllers; do if [ -d \"dist/src/$dir\" ]; then mkdir -p \"dist/$dir\" && cp -r \"dist/src/$dir\"/* \"dist/$dir/\" || true; fi; done",
+    "copy-files": "mkdir -p dist/functions && cp -r netlify/functions/* dist/functions/ && cp -r src/* dist/",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest watch",
