Update build script

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "npm install && tsc && npm run copy-files",
-    "copy-files": "mkdir -p dist/functions && cp -r netlify/functions/* dist/functions/ && cp -r dist/src/* dist/functions/",
+    "copy-files": "mkdir -p dist/functions && cp -r netlify/functions/* dist/functions/ && mkdir -p netlify/config netlify/middleware netlify/models netlify/routes && cp -r dist/config/* netlify/config/ && cp -r dist/middleware/* netlify/middleware/ && cp -r dist/models/* netlify/models/ && cp -r dist/routes/* netlify/routes/",
     "test": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest watch",
