--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -11,6 +11,7 @@
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
+  included_files = ["dist/**", "netlify/**"]
   external_node_modules = ["express", "mongoose"]
 
 [dev]
