Add debug for cors issues

--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -61,4 +61,13 @@
 
 # Development context
 [context.dev.environment]
-  NODE_ENV = "development" 
+  NODE_ENV = "development"
+
+[[headers]]
+  for = "/.netlify/functions/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "https://emilia-burza-entertainment-app.netlify.app"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+    Access-Control-Allow-Credentials = "true"
+    Access-Control-Max-Age = "86400" 
